[package]
name = "aoc2020"
version = "0.1.0"
authors = ["blueblank <blueblank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3"
itertools = "0.9.0"
anyhow = "1.0"
regex = "1.4"
logos = "*"
lazy_static = "1.4"
